melhoria na página de teste de performance

--- a/changelog.html
+++ b/changelog.html
@@ -38,6 +38,7 @@
         <nav>
             <a href="./index.html">Página inicial</a>
             <a href="./input-examples.html">Exemplos de entrada</a>
+            <a href="./performance-test.html">Teste de performance</a>
             <a href="./study-notes.html">Notas de estudo</a>
             <a href="./feedback.html"><strong>Dê seu feedback</strong></a>
             <a href="./changelog.html" class="active">Registro de updates do site</a>
@@ -56,12 +57,18 @@
                 <p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o <a href="https://github.com/gAldeia/gAldeia.github.io">GitHub</a>. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
             </div>
 
+            <p class="text-justify"><b>23/12/2017</b></p>
+            <p class="text-justify"> - Labels funcionam na página de teste de performance.</p>
+            <p class="text-justify"> - Menu de páginas atualizado.</p>
+            <p class="text-justify"> - Imagens seguras.</p>
+            <p class="text-justify"> - Mensagens de aviso ao usuário na página de teste de performance.</p>
+
             <p class="text-justify"><b>21/12/2017</b></p>
-            <p class="text-justify"> -Mais linhas de entradas nos algoritmos de exemplo.</p>
+            <p class="text-justify"> - Mais linhas de entradas nos algoritmos de exemplo.</p>
 
             <p class="text-justify"><b>18/12/2017</b></p>
             <p class="text-justify"> - Página de teste de performance dos algoritmos.</p>
-            <p class="text-justify"> - Contagem do tempo de execução.</p>
+            <p class="text-justify"> - Contagem do tempo de execução e do score médio.</p>
 
             <p class="text-justify"><b>16/12/2017</b></p>
             <p class="text-justify"> - Incorporação do google analytics.</p>
