--- a/index-en.html
+++ b/index-en.html
@@ -49,6 +49,7 @@
         <nav>
             <a href="./index-en.html" class="active">Home</a>
             <a href="./input-examples-en.html">Input examples</a>
+            <a href="./performance-test.html">Performance test</a>
             <a href="./study-notes.html">Study notes (in portuguese)</a>
             <a href="./feedback.html"><strong>Send us your feedback</strong></a>
             <a href="./changelog.html">Roadmap (in portuguese)</a>
@@ -151,11 +152,11 @@
 
                 <p class="text-justify">The score is a way to quantify the performance of each algorithm. The value can range from 0 to 1, being 1 a perfect fit. This score is calculated by:</p>
 
-                <br><p class="text-center"><img src="http://mathurl.com/ybb9pq4h.png"></p><br>
+                <br><p class="text-center"><img src="./images/equations/ybb9pq4h.png"></p><br>
                 
                 <p class="text-justify">where MAE is the Mean Absolute Error:</p>
 
-                <br><p class="text-center"><img src="http://mathurl.com/ydxewnc9.png"></p><br>
+                <br><p class="text-center"><img src="./images/equations/ycsf5jf9.png"></p><br>
                 
                 <p class="text-justify"><b>Algoritmo SymTree</b></p>
                 <p class="text-justify">This algorithm starts with a single solution representing a simple linear regression. At every iteration it improves the current expression by applying interaction and transformation operators on their current terms. More details can be seen at: </p>
