--- a/input-examples-en.html
+++ b/input-examples-en.html
@@ -49,6 +49,7 @@
         <nav>
             <a href="./index-en.html">Home</a>
             <a href="./input-examples-en.html" class="active">Input examples</a>
+            <a href="./performance-test.html">Performance test</a>
             <a href="./study-notes.html">Study notes (in portuguese)</a>
             <a href="./feedback.html"><strong>Send us your feedback</strong></a>
             <a href="./changelog.html">Roadmap (in portuguese)</a>
