--- a/feedback.html
+++ b/feedback.html
@@ -38,6 +38,7 @@
         <nav>
             <a href="./index.html">Página inicial</a>
             <a href="./input-examples.html">Exemplos de entrada</a>
+            <a href="./performance-test.html">Teste de performance</a>
             <a href="./study-notes.html">Notas de estudo</a>
             <a href="./feedback.html" class="active"><strong>Dê seu feedback</strong></a>
             <a href="./changelog.html">Registro de updates do site</a>
