--- a/input-examples.html
+++ b/input-examples.html
@@ -49,6 +49,7 @@
         <nav>
             <a href="./index.html">Página inicial</a>
             <a href="./input-examples.html" class="active">Exemplos de entrada</a>
+            <a href="./performance-test.html">Teste de performance</a>
             <a href="./study-notes.html">Notas de estudo</a>
             <a href="./feedback.html"><strong>Dê seu feedback</strong></a>
             <a href="./changelog.html">Registro de updates do site</a>
