novas tabelas de entrada

--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
             <p class="text-justify"> - Menu de páginas atualizado.</p>
             <p class="text-justify"> - Imagens seguras.</p>
             <p class="text-justify"> - Mensagens de aviso ao usuário na página de teste de performance.</p>
+            <p class="text-justify"> - Novas equações na página de exemplos de entrada que podem ser encontradas.</p>
 
             <p class="text-justify"><b>21/12/2017</b></p>
             <p class="text-justify"> - Mais linhas de entradas nos algoritmos de exemplo.</p>
