--- a/input-examples.html
+++ b/input-examples.html
@@ -320,6 +320,87 @@
                         <caption class="text-center">Média aritmética simples:<br>m = ( &Sigma; x<sub>i</sub> )/n</caption>
                     </table>
                 </div>
+
+                <div class="col-lg-4">
+                    <table align="center" style="width:260px">
+                        <tr><th>r</th><th>A</th></tr>
+                        <tr><td>35.0</td><td>15393.8008</td></tr>
+                        <tr><td>18.5</td><td>4300.839448</td></tr>
+                        <tr><td>0.5</td><td>3.141592</td></tr>
+                        <tr><td>24.0</td><td>7238.227968</td></tr>
+                        <tr><td>1.0</td><td>12.566368</td></tr>
+                        <tr><td>27.5</td><td>9503.3158</td></tr>
+                        <tr><td>49.5</td><td>30790.743192</td></tr>
+                        <tr><td>30.5</td><td>11689.863832</td></tr>
+                        <tr><td>47.5</td><td>28352.8678</td></tr>
+                        <tr><td>22.0</td><td>6082.122112</td></tr>
+                        <tr><td>26.0</td><td>8494.864768</td></tr>
+                        <tr><td>25.5</td><td>8171.280792</td></tr>
+                        <tr><td>38.5</td><td>18626.498968</td></tr>
+                        <tr><td>13.0</td><td>2123.716192</td></tr>
+                        <tr><td>11.5</td><td>1661.902168</td></tr>
+                        <tr><td>15.5</td><td>3019.069912</td></tr>
+                        <tr><td>17.0</td><td>3631.680352</td></tr>
+                        <tr><td>4.5</td><td>254.468952</td></tr>
+                        <tr><td>21.5</td><td>5808.803608</td></tr>
+                        <tr><td>33.5</td><td>14102.606488</td></tr>
+                        <caption class="text-center">Área superficial de uma esfera:<br>A = 4&middot;&pi;&middot;r<sup>2</sup></caption>
+                    </table>
+                </div>
+
+                <div class="col-lg-4">
+                    <table align="center" style="width:260px">
+                        <tr><th>r</th><th>h</th><th>A</th></tr>
+                        <tr><td>21.5</td><td>29</td><td>6821.967028</td></tr>
+                        <tr><td>48.5</td><td>24</td><td>22093.24574</td></tr>
+                        <tr><td>12.0</td><td>48</td><td>4523.89248</td></tr>
+                        <tr><td>32.5</td><td>3</td><td>7249.22354</td></tr>
+                        <tr><td>38.5</td><td>1</td><td>9555.152068</td></tr>
+                        <tr><td>42.5</td><td>7</td><td>13218.24834</td></tr>
+                        <tr><td>47.0</td><td>5</td><td>15356.101696</td></tr>
+                        <tr><td>24.0</td><td>20</td><td>6635.042304</td></tr>
+                        <tr><td>46.0</td><td>6</td><td>15029.376128</td></tr>
+                        <tr><td>20.5</td><td>40</td><td>7792.718956</td></tr>
+                        <tr><td>37.0</td><td>16</td><td>12321.323824</td></tr>
+                        <tr><td>9.5</td><td>32</td><td>2477.145292</td></tr>
+                        <tr><td>9.0</td><td>30</td><td>2205.397584</td></tr>
+                        <tr><td>10.0</td><td>14</td><td>1507.96416</td></tr>
+                        <tr><td>16.0</td><td>25</td><td>4121.768704</td></tr>
+                        <tr><td>0.5</td><td>41</td><td>130.376068</td></tr>
+                        <tr><td>45.5</td><td>47</td><td>26444.35066</td></tr>
+                        <tr><td>36.0</td><td>0</td><td>8143.006464</td></tr>
+                        <tr><td>18.0</td><td>42</td><td>6785.83872</td></tr>
+                        <tr><td>28.5</td><td>10</td><td>6894.223644</td></tr>
+                        <caption class="text-center">Área superficial de uma cilindro:<br>A = 2&middot;&pi;&middot;r<sup>2</sup> + 2&middot;&pi;&middot;r&middot;h</caption>
+                    </table>
+                </div>
+
+                <div class="col-lg-4">
+                    <table align="center" style="width:260px">
+                        <tr><th>k</th><th>&Delta;l</th><th>E</th></tr>
+                        <tr><td>1.35</td><td>25.0</td><td>421.875</td></tr>
+                        <tr><td>0.05</td><td>87.5</td><td>191.40625</td></tr>
+                        <tr><td>1.15</td><td>42.5</td><td>1038.59375</td></tr>
+                        <tr><td>0.6</td><td>82.5</td><td>2041.875</td></tr>
+                        <tr><td>0.25</td><td>40.0</td><td>200.0</td></tr>
+                        <tr><td>0.95</td><td>95.0</td><td>4286.875</td></tr>
+                        <tr><td>1.8</td><td>37.5</td><td>1265.625</td></tr>
+                        <tr><td>1.5</td><td>45.0</td><td>1518.75</td></tr>
+                        <tr><td>0.4</td><td>35.0</td><td>245.0</td></tr>
+                        <tr><td>1.6</td><td>85.0</td><td>5780.0</td></tr>
+                        <tr><td>1.25</td><td>57.5</td><td>2066.40625</td></tr>
+                        <tr><td>0.75</td><td>75.0</td><td>2109.375</td></tr>
+                        <tr><td>0.8</td><td>12.5</td><td>62.5</td></tr>
+                        <tr><td>1.55</td><td>20.0</td><td>310.0</td></tr>
+                        <tr><td>0.1</td><td>55.0</td><td>151.25</td></tr>
+                        <tr><td>0.45</td><td>30.0</td><td>202.5</td></tr>
+                        <tr><td>1.9</td><td>70.0</td><td>4655.0</td></tr>
+                        <tr><td>1.85</td><td>97.5</td><td>8793.28125</td></tr>
+                        <tr><td>0.65</td><td>60.0</td><td>1170.0</td></tr>
+                        <tr><td>0.3</td><td>47.5</td><td>338.4375</td></tr>
+                        <caption class="text-center">Energia potencial elástica:<br>E = 0.5&middot;k&middot;&Delta;l<sup>2</sup></caption>
+                    </table>
+                </div>
             </div>
         </div>
 
