--- a/changelog.html
+++ b/changelog.html
@@ -60,6 +60,8 @@
             <p class="text-justify"><b>23/12/2017</b></p>
             <p class="text-justify"> - Labels funcionam na página de teste de performance.</p>
             <p class="text-justify"> - Menu de páginas atualizado.</p>
+            <p class="text-justify"> - Uso do ploty.js.</p>
+            <p class="text-justify"> - Plot da distribuição do tempo e score na página de teste de performance.</p>
             <p class="text-justify"> - Imagens seguras.</p>
             <p class="text-justify"> - Mensagens de aviso ao usuário na página de teste de performance.</p>
             <p class="text-justify"> - Novas equações na página de exemplos de entrada que podem ser encontradas.</p>
