--- a/performance-test.html
+++ b/performance-test.html
@@ -100,6 +100,12 @@
 
                 <div id="results">
                 </div>
+
+                <div class="text-center" id="histogram1">
+                </div>
+
+                <div class="text-center" id="histogram2">
+                </div>
             </div>
         </section>
         <section id="contact-us">
@@ -121,6 +127,7 @@
     <script type="text/javascript" src=./scripts/SymbolicRegression.js></script>
     <script type="text/javascript" src=./scripts/SymbolicRegressionTest.js></script>
 
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
