--- a/performance-test.html
+++ b/performance-test.html
@@ -94,6 +94,7 @@
 
                 <p class="text-center">
                     <button type="button" class="btn btn-primary btn-lg btn-block" onclick="run_regression_d('SymTree')">SymTree</button>
+                    <button type="button" class="btn btn-primary btn-lg btn-block" onclick="run_regression_d('FastSymTree')">Fast SymTree (apenas 2 interações)</button>
                     <button type="button" class="btn btn-primary btn-lg btn-block" onclick="run_regression_d('ITLS')">IT-LS</button>
                     <button type="button" class="btn btn-primary btn-lg btn-block" onclick="run_regression_d('ITES')">IT-ES</button>
                 </p>
