--- a/input-examples.html
+++ b/input-examples.html
@@ -401,6 +401,60 @@
                         <caption class="text-center">Energia potencial elástica:<br>E = 0.5&middot;k&middot;&Delta;l<sup>2</sup></caption>
                     </table>
                 </div>
+
+                <div class="col-lg-4">
+                    <table align="center" style="width:260px">
+                        <tr><th>m</th><th>V</th><th>&rho;</th></tr>
+                        <tr><td>1.0</td><td>0.5</td><td>2.0</td></tr>
+                        <tr><td>8.25</td><td>0.55</td><td>15.0</td></tr>
+                        <tr><td>4.75</td><td>0.6</td><td>7.916</td></tr>
+                        <tr><td>7.0</td><td>1.0</td><td>7.0</td></tr>
+                        <tr><td>9.75</td><td>0.05</td><td>195.0</td></tr>
+                        <tr><td>6.0</td><td>0.3</td><td>20.0</td></tr>
+                        <tr><td>6.25</td><td>0.7</td><td>8.928</td></tr>
+                        <tr><td>2.5</td><td>0.9</td><td>2.777</td></tr>
+                        <tr><td>1.25</td><td>0.4</td><td>3.125</td></tr>
+                        <tr><td>4.0</td><td>0.15</td><td>26.666</td></tr>
+                        <tr><td>7.25</td><td>0.1</td><td>72.5</td></tr>
+                        <tr><td>4.5</td><td>0.95</td><td>4.736</td></tr>
+                        <tr><td>1.75</td><td>0.75</td><td>2.333</td></tr>
+                        <tr><td>3.0</td><td>0.25</td><td>12.0</td></tr>
+                        <tr><td>7.75</td><td>0.85</td><td>9.117</td></tr>
+                        <tr><td>8.75</td><td>0.45</td><td>19.444</td></tr>
+                        <tr><td>7.5</td><td>0.35</td><td>21.428</td></tr>
+                        <tr><td>9.0</td><td>0.8</td><td>11.25</td></tr>
+                        <tr><td>6.5</td><td>0.2</td><td>32.5</td></tr>
+                        <tr><td>6.75</td><td>0.65</td><td>10.384</td></tr>
+                        <caption class="text-center">Densidade:<br>&rho; = m/V</caption>
+                    </table>
+                </div>
+
+                <div class="col-lg-4">
+                    <table align="center" style="width:260px">
+                        <tr><th>I</th><th>I<sub>0</sub></th><th>&beta;</th></tr>
+                        <tr><td>8.6e-07</td><td>1.6e-11</td><td>108.92098946</td></tr>
+                        <tr><td>5.04e-06</td><td>4.2e-11</td><td>116.952470218</td></tr>
+                        <tr><td>7.29e-06</td><td>3.8e-11</td><td>121.644279443</td></tr>
+                        <tr><td>5.4e-07</td><td>7.6e-11</td><td>88.6859107825</td></tr>
+                        <tr><td>2.5e-07</td><td>6.2e-11</td><td>83.020818118</td></tr>
+                        <tr><td>7.09e-06</td><td>6e-11</td><td>116.798513363</td></tr>
+                        <tr><td>6.32e-06</td><td>4.6e-11</td><td>118.305883696</td></tr>
+                        <tr><td>1.89e-06</td><td>8e-12</td><td>123.726458454</td></tr>
+                        <tr><td>4.98e-06</td><td>8.1e-11</td><td>110.264912943</td></tr>
+                        <tr><td>1.63e-06</td><td>9e-11</td><td>98.0428090245</td></tr>
+                        <tr><td>2.24e-06</td><td>3e-11</td><td>112.207890422</td></tr>
+                        <tr><td>7.99e-06</td><td>9.8e-11</td><td>113.087338391</td></tr>
+                        <tr><td>5.98e-06</td><td>3.5e-11</td><td>120.485830644</td></tr>
+                        <tr><td>3.34e-06</td><td>3e-12</td><td>139.228690763</td></tr>
+                        <tr><td>6.12e-06</td><td>5.3e-11</td><td>116.567807409</td></tr>
+                        <tr><td>2.08e-06</td><td>8.9e-11</td><td>100.592420819</td></tr>
+                        <tr><td>4.85e-06</td><td>4.4e-11</td><td>116.10299629</td></tr>
+                        <tr><td>8.34e-06</td><td>9.4e-11</td><td>113.932789921</td></tr>
+                        <tr><td>7.03e-06</td><td>6.3e-11</td><td>116.225625374</td></tr>
+                        <tr><td>9.89e-06</td><td>7.7e-11</td><td>117.632292817</td></tr>
+                        <caption class="text-center">Intensidade sonora:<br>&beta; = (10dB)&middot;log(I/I<sub>0</sub>)</caption>
+                    </table>
+                </div>
             </div>
         </div>
 
