--- a/changelog.html
+++ b/changelog.html
@@ -57,6 +57,9 @@
                 <p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o <a href="https://github.com/gAldeia/gAldeia.github.io">GitHub</a>. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
             </div>
 
+            <p class="text-justify"><b>04/01/2018</b></p>
+            <p class="text-justify"> - Tabelas da página em inglês traduzidas.</p>
+
             <p class="text-justify"><b>02/01/2018</b></p>
             <p class="text-justify"> - Ruido no gerador agora usa porcentagem de erro, não valores aleatórios pequenos (erro é proporcional aos dados).</p>
             <p class="text-justify"> - Página de testes tem opção de rodar o SymTree com apenas 2 iterações.</p>
