--- a/input-examples-en.html
+++ b/input-examples-en.html
@@ -290,6 +290,141 @@
                         <caption class="text-center">Arithmetic mean:<br>m = ( &Sigma; x<sub>i</sub> )/n</caption>
                     </table></p>
                 </div>
+
+                <div class="col-lg-4">
+                    <table align="center" style="width:260px">
+                        <tr><th>r</th><th>A</th></tr>
+                        <tr><td>35.0</td><td>15393.8008</td></tr>
+                        <tr><td>18.5</td><td>4300.839448</td></tr>
+                        <tr><td>0.5</td><td>3.141592</td></tr>
+                        <tr><td>24.0</td><td>7238.227968</td></tr>
+                        <tr><td>1.0</td><td>12.566368</td></tr>
+                        <tr><td>27.5</td><td>9503.3158</td></tr>
+                        <tr><td>49.5</td><td>30790.743192</td></tr>
+                        <tr><td>30.5</td><td>11689.863832</td></tr>
+                        <tr><td>47.5</td><td>28352.8678</td></tr>
+                        <tr><td>22.0</td><td>6082.122112</td></tr>
+                        <tr><td>26.0</td><td>8494.864768</td></tr>
+                        <tr><td>25.5</td><td>8171.280792</td></tr>
+                        <tr><td>38.5</td><td>18626.498968</td></tr>
+                        <tr><td>13.0</td><td>2123.716192</td></tr>
+                        <tr><td>11.5</td><td>1661.902168</td></tr>
+                        <tr><td>15.5</td><td>3019.069912</td></tr>
+                        <tr><td>17.0</td><td>3631.680352</td></tr>
+                        <tr><td>4.5</td><td>254.468952</td></tr>
+                        <tr><td>21.5</td><td>5808.803608</td></tr>
+                        <tr><td>33.5</td><td>14102.606488</td></tr>
+                        <caption class="text-center">Sphere Surface Area:<br>A = 4&middot;&pi;&middot;r<sup>2</sup></caption>
+                    </table>
+                </div>
+
+                <div class="col-lg-4">
+                    <table align="center" style="width:260px">
+                        <tr><th>r</th><th>h</th><th>A</th></tr>
+                        <tr><td>21.5</td><td>29</td><td>6821.967028</td></tr>
+                        <tr><td>48.5</td><td>24</td><td>22093.24574</td></tr>
+                        <tr><td>12.0</td><td>48</td><td>4523.89248</td></tr>
+                        <tr><td>32.5</td><td>3</td><td>7249.22354</td></tr>
+                        <tr><td>38.5</td><td>1</td><td>9555.152068</td></tr>
+                        <tr><td>42.5</td><td>7</td><td>13218.24834</td></tr>
+                        <tr><td>47.0</td><td>5</td><td>15356.101696</td></tr>
+                        <tr><td>24.0</td><td>20</td><td>6635.042304</td></tr>
+                        <tr><td>46.0</td><td>6</td><td>15029.376128</td></tr>
+                        <tr><td>20.5</td><td>40</td><td>7792.718956</td></tr>
+                        <tr><td>37.0</td><td>16</td><td>12321.323824</td></tr>
+                        <tr><td>9.5</td><td>32</td><td>2477.145292</td></tr>
+                        <tr><td>9.0</td><td>30</td><td>2205.397584</td></tr>
+                        <tr><td>10.0</td><td>14</td><td>1507.96416</td></tr>
+                        <tr><td>16.0</td><td>25</td><td>4121.768704</td></tr>
+                        <tr><td>0.5</td><td>41</td><td>130.376068</td></tr>
+                        <tr><td>45.5</td><td>47</td><td>26444.35066</td></tr>
+                        <tr><td>36.0</td><td>0</td><td>8143.006464</td></tr>
+                        <tr><td>18.0</td><td>42</td><td>6785.83872</td></tr>
+                        <tr><td>28.5</td><td>10</td><td>6894.223644</td></tr>
+                        <caption class="text-center">Cylinder Surface Area:<br>A = 2&middot;&pi;&middot;r<sup>2</sup> + 2&middot;&pi;&middot;r&middot;h</caption>
+                    </table>
+                </div>
+
+                <div class="col-lg-4">
+                    <table align="center" style="width:260px">
+                        <tr><th>k</th><th>&Delta;l</th><th>E</th></tr>
+                        <tr><td>1.35</td><td>25.0</td><td>421.875</td></tr>
+                        <tr><td>0.05</td><td>87.5</td><td>191.40625</td></tr>
+                        <tr><td>1.15</td><td>42.5</td><td>1038.59375</td></tr>
+                        <tr><td>0.6</td><td>82.5</td><td>2041.875</td></tr>
+                        <tr><td>0.25</td><td>40.0</td><td>200.0</td></tr>
+                        <tr><td>0.95</td><td>95.0</td><td>4286.875</td></tr>
+                        <tr><td>1.8</td><td>37.5</td><td>1265.625</td></tr>
+                        <tr><td>1.5</td><td>45.0</td><td>1518.75</td></tr>
+                        <tr><td>0.4</td><td>35.0</td><td>245.0</td></tr>
+                        <tr><td>1.6</td><td>85.0</td><td>5780.0</td></tr>
+                        <tr><td>1.25</td><td>57.5</td><td>2066.40625</td></tr>
+                        <tr><td>0.75</td><td>75.0</td><td>2109.375</td></tr>
+                        <tr><td>0.8</td><td>12.5</td><td>62.5</td></tr>
+                        <tr><td>1.55</td><td>20.0</td><td>310.0</td></tr>
+                        <tr><td>0.1</td><td>55.0</td><td>151.25</td></tr>
+                        <tr><td>0.45</td><td>30.0</td><td>202.5</td></tr>
+                        <tr><td>1.9</td><td>70.0</td><td>4655.0</td></tr>
+                        <tr><td>1.85</td><td>97.5</td><td>8793.28125</td></tr>
+                        <tr><td>0.65</td><td>60.0</td><td>1170.0</td></tr>
+                        <tr><td>0.3</td><td>47.5</td><td>338.4375</td></tr>
+                        <caption class="text-center">Elastic Potential Energy:<br>E = 0.5&middot;k&middot;&Delta;l<sup>2</sup></caption>
+                    </table>
+                </div>
+
+                <div class="col-lg-4">
+                    <table align="center" style="width:260px">
+                        <tr><th>m</th><th>V</th><th>&rho;</th></tr>
+                        <tr><td>1.0</td><td>0.5</td><td>2.0</td></tr>
+                        <tr><td>8.25</td><td>0.55</td><td>15.0</td></tr>
+                        <tr><td>4.75</td><td>0.6</td><td>7.916</td></tr>
+                        <tr><td>7.0</td><td>1.0</td><td>7.0</td></tr>
+                        <tr><td>9.75</td><td>0.05</td><td>195.0</td></tr>
+                        <tr><td>6.0</td><td>0.3</td><td>20.0</td></tr>
+                        <tr><td>6.25</td><td>0.7</td><td>8.928</td></tr>
+                        <tr><td>2.5</td><td>0.9</td><td>2.777</td></tr>
+                        <tr><td>1.25</td><td>0.4</td><td>3.125</td></tr>
+                        <tr><td>4.0</td><td>0.15</td><td>26.666</td></tr>
+                        <tr><td>7.25</td><td>0.1</td><td>72.5</td></tr>
+                        <tr><td>4.5</td><td>0.95</td><td>4.736</td></tr>
+                        <tr><td>1.75</td><td>0.75</td><td>2.333</td></tr>
+                        <tr><td>3.0</td><td>0.25</td><td>12.0</td></tr>
+                        <tr><td>7.75</td><td>0.85</td><td>9.117</td></tr>
+                        <tr><td>8.75</td><td>0.45</td><td>19.444</td></tr>
+                        <tr><td>7.5</td><td>0.35</td><td>21.428</td></tr>
+                        <tr><td>9.0</td><td>0.8</td><td>11.25</td></tr>
+                        <tr><td>6.5</td><td>0.2</td><td>32.5</td></tr>
+                        <tr><td>6.75</td><td>0.65</td><td>10.384</td></tr>
+                        <caption class="text-center">Density:<br>&rho; = m/V</caption>
+                    </table>
+                </div>
+
+                <div class="col-lg-4">
+                    <table align="center" style="width:260px">
+                        <tr><th>I</th><th>I<sub>0</sub></th><th>&beta;</th></tr>
+                        <tr><td>8.6e-07</td><td>1.6e-11</td><td>108.92098946</td></tr>
+                        <tr><td>5.04e-06</td><td>4.2e-11</td><td>116.952470218</td></tr>
+                        <tr><td>7.29e-06</td><td>3.8e-11</td><td>121.644279443</td></tr>
+                        <tr><td>5.4e-07</td><td>7.6e-11</td><td>88.6859107825</td></tr>
+                        <tr><td>2.5e-07</td><td>6.2e-11</td><td>83.020818118</td></tr>
+                        <tr><td>7.09e-06</td><td>6e-11</td><td>116.798513363</td></tr>
+                        <tr><td>6.32e-06</td><td>4.6e-11</td><td>118.305883696</td></tr>
+                        <tr><td>1.89e-06</td><td>8e-12</td><td>123.726458454</td></tr>
+                        <tr><td>4.98e-06</td><td>8.1e-11</td><td>110.264912943</td></tr>
+                        <tr><td>1.63e-06</td><td>9e-11</td><td>98.0428090245</td></tr>
+                        <tr><td>2.24e-06</td><td>3e-11</td><td>112.207890422</td></tr>
+                        <tr><td>7.99e-06</td><td>9.8e-11</td><td>113.087338391</td></tr>
+                        <tr><td>5.98e-06</td><td>3.5e-11</td><td>120.485830644</td></tr>
+                        <tr><td>3.34e-06</td><td>3e-12</td><td>139.228690763</td></tr>
+                        <tr><td>6.12e-06</td><td>5.3e-11</td><td>116.567807409</td></tr>
+                        <tr><td>2.08e-06</td><td>8.9e-11</td><td>100.592420819</td></tr>
+                        <tr><td>4.85e-06</td><td>4.4e-11</td><td>116.10299629</td></tr>
+                        <tr><td>8.34e-06</td><td>9.4e-11</td><td>113.932789921</td></tr>
+                        <tr><td>7.03e-06</td><td>6.3e-11</td><td>116.225625374</td></tr>
+                        <tr><td>9.89e-06</td><td>7.7e-11</td><td>117.632292817</td></tr>
+                        <caption class="text-center">Sound Intensity Level:<br>&beta; = (10dB)&middot;log(I/I<sub>0</sub>)</caption>
+                    </table>
+                </div>
             </div>
         </div>
       
