--- a/input-examples.html
+++ b/input-examples.html
@@ -650,7 +650,7 @@
                     <label for="noise">Ruído nos dados?</label>
                     <br>
                     <input type="checkbox" id="positiveOnly" value="true">
-                    <label for="noise">Usar só valores positivos?</label>
+                    <label for="positiveOnly">Usar só valores positivos?</label>
                 </div>
             </div><br>
 
