--- a/index-en.html
+++ b/index-en.html
@@ -143,6 +143,8 @@
                 </p>
 
                 <div id="results">
+                    <div id="sr-result"></div>
+                    <div id="sr-graphics"></div>
                 </div>
             </div>
         </section>
