--- a/index-en.html
+++ b/index-en.html
@@ -202,6 +202,7 @@
 	<script type="text/javascript" src=./scripts/math.js></script>
 	<script type="text/javascript" src=./scripts/SymbolicRegression.js></script>
 
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
