--- a/changelog.html
+++ b/changelog.html
@@ -63,8 +63,12 @@
             <p class="text-justify"> - Criar um painel onde o usuário possa escolher por conta própria os parâmetros passados para cada algoritmo de regressão simbólica.</p>
             <p class="text-justify"> - Ver se as grids do bootstrap não extrapolam os limites da página em diferentes resoluções de tela.</p>
             <p class="text-justify"> - Remake na estrutura da página.</p>
+            <p class="text-justify"> - Usar toggle hide/show para ocultar elementos que são criados por script (como o analisador de gráficos em resultados) para permitir que o texto possa ser em ing/pt.</p>
+            <p class="text-justify"> - Debugar o código para encontrar os pontos onde existem comandos inalcanáveis devido a "return".</p>
+            <p class="text-justify"> - Criar uma pasta com a versão final do IC quando foi submetido o artigo.</p>
             <p class="text-justify"> - Fazer com que inputpoints seja ou global ou sempre passado como parâmetro no construtor de todos os métodos de regressão simbólica, para unificar o código e evitar problemas.</p>
             <p class="text-justify"> - Colocar um readme no repositório do git.</p>
+            <p class="text-justify"> - Otimizar a página para ser encontrada por sites de busca (meta content, description, etc).</p>
             <p class="text-justify"> - Melhorar os comentários do symbolicregression.js.</p>
             <p class="text-justify"> - script do loadFIle recebe o id do elemento html para ler, possibilitando várias caixas de leitura em uma mesma página.</p>
             <p class="text-justify"> - Tentar melhorar todos os "ids" das páginas html.</p>
@@ -78,6 +82,10 @@
             <div class="alert alert-info">
                 <p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o <a href="https://github.com/gAldeia/gAldeia.github.io">GitHub</a>. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
             </div>
+
+            <p class="text-justify"><b>11/01/2018</b></p>
+            <p class="text-justify"> - Informação do tempo de execução sendo mostrada ao usuário.</p>
+            <p class="text-justify"> - Possível plotar o gráfico de termos isolados de acordo com o range da entrada.</p>
 
             <p class="text-justify"><b>10/01/2018</b></p>
             <p class="text-justify"> - Nova função em LE, "solve", que simplesmente calcula o valor dela passados os valores para suas variáveis. Ao contrário de "evaluate", não calcula o MAE nem atualiza o score.</p>
