lista de updates pode ser contraída

--- a/input-examples.html
+++ b/input-examples.html
@@ -628,7 +628,7 @@
                 <p class="text-justify">- As linhas de entrada das funções são geradas assim que a página carrega, portanto uma entrada que você tenha usado antes talvez seja diferente, mas ainda vem da mesma expressão.</p>
                 <p class="text-justify">- funções trigonométricas usam radianos.</p>
                 <p class="text-justify">- O padrão numérico utilizado é o americano, com casas decimais separadas por ponto.</p>
-                <p class="text-justify">- O ruído adiciona um erro de até 0.3 nos dados aleatóriamente.</p>
+                <p class="text-justify">- O ruído adiciona um erro de 1% nos resultados finais.</p>
             </div>
         </div>
 
