referencia para o layout antigo

--- a/changelog.html
+++ b/changelog.html
@@ -100,6 +100,7 @@
                                         <p><b>17/01/2018</b></p>
                                         <ul>
                                             <li>Remake passou a ser oficial.</li>
+                                            <li>Referência para o layout antigo adicionada na página inicial.</li>
                                             <li>Códigos HTML revisados e alguns visuais refeitos.</li>
                                             <li>Textos modificados para o plot.</li>
                                         </ul> 
