--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
             <div class="content-text">
                 <p class="text-justify">Página desenvolvida para mostrar a possibilidade de aplicação do algoritmo SymTree para Regressão Simbólica com baixo custo computacional. Essa ferramenta pode ser utilizada como auxiliar de laboratórios didáticos em que são feitos experimentos de mensuração para verificar relações vistas em sala de aula. A tecnologia utilizada é a linguagem JavaScript e, portanto, executa o algoritmo no próprio navegador do usuário. Experimente!</p><br>
                 <div class="alert alert-info">
-                    <strong>Aviso:</strong> O site ainda está em desenvolvimento. Podem ocorrer problemas durante a execução de algumas operações. Críticas e sugestões são bem vindas. Informações de contato no final da página.
+                    <strong>Avisos:</strong><br> 
+                    <ul>
+                        <li>
+                            O site ainda está em desenvolvimento. Podem ocorrer problemas durante a execução de algumas operações. Críticas e sugestões são bem vindas. Informações de contato no final da página.
+                        </li>
+                        <li>
+                            <strong>Novo layout!</strong> Caso ainda prefira o layout antigo, <a href="./old_version/index.html">clique aqui</a>.
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
