textos em inglês

--- a/changelog.html
+++ b/changelog.html
@@ -77,9 +77,6 @@
                                     <div class="panel-body">Otimizar a página para ser encontrada por sites de busca (meta content, description, etc).</div>
 
                                     <div class="panel-body">Melhorar os comentários do symbolicregression.js.</div>
-
-                                    <div class="panel-body">script do loadFile recebe o id do elemento html para ler, possibilitando várias caixas de leitura em uma mesma página.</div>
-
                                 </div>
                             </div>
                         </div>
@@ -96,6 +93,16 @@
                                     <a class="panel-title" data-toggle="collapse" href="#collapse2"><span class="glyphicon glyphicon-list-alt"></span> <strong>Expandir lista</strong> (show updates list)</a>
                                 </div>
                                 <div id="collapse2" class="panel-collapse collapse text-justify">
+                                    <div class="panel-body">
+                                        <p><b>20/01/2018</b></p>
+                                        <ul>
+                                            <li>script do loadFile recebe o id do elemento html para ler, possibilitando várias caixas de leitura em uma mesma página.</li>
+                                            <li>Nova página inicial, com caixas collapse, deixando a página menos "poluida"</li>
+                                            <li>Loadfile "arremessa" erros para entradas inválidas, ao invés de escrever na tela e retornar nulo</li>
+                                            <li>Mensagens de notificação da entrada do usuário agora também em inglês!</li>
+                                        </ul> 
+                                    </div>
+
                                     <div class="panel-body">
                                         <p><b>17/01/2018</b></p>
                                         <ul>
